--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/SavjeeTutorials/SavjeeCoin",
   "dependencies": {
+    "bloom-filters": "^1.3.1",
+    "crypto-js": "^4.0.0",
     "debug": "^4.1.1",
     "elliptic": "^6.5.1",
-    "fully-connected-topology": "^1.1.1"
+    "fully-connected-topology": "^1.1.1",
+    "merkletreejs": "^0.2.12"
   },
   "devDependencies": {
     "coveralls": "^3.0.6",
